# PyNFe

./: .gitignore  AGENTS.md  AUTHORS  CLAUDE.md  LICENSE  MANIFEST.in  PLANEJAMENTO  README  README.md  ass_xml.py  gerarnfsebindings.sh  pyproject.toml  qrCode2Teste.py  requirements-dev.txt  requirements-nfse.txt  requirements.txt  run_fake_soap_server.py  run_tests.py  separarpfx.sh  setup.py  test.py  texte.xml
.devcontainer/: Dockerfile  devcontainer.json
docs/: Makefile  autorizador_nfse_map.md  comunicacao_map.md  conf.py  evento_map.md  flags_map.md  index.rst  make.bat  manifesto_map.md  notafiscal_map.md  reforma_tributaria.md  serializacao_map.md  webservices_map.md
pynfe/: __init__.py  excecoes.py
tests/: 01-basico.txt  02-modelo-00-definicoes-gerais.txt  02-modelo-01-emitente.txt  02-modelo-02-produto.txt  02-modelo-03-cliente.txt  02-modelo-04-transportadora.txt  02-modelo-05-notafiscal.txt  02-modelo-06-certificado.txt  02-modelo-07-validacao.txt  02-modelo.txt  03-processamento-00-definicoes-gerais.txt  03-processamento-01-serializacao-xml.txt  03-processamento-03-assinatura.txt  03-processamento-04-comunicacao.txt  03-processamento.txt  04-servidor-soap.txt  certificado.pfx  consulta_distribuicao.txt  key.pem  test_certificadoA1.py  test_get_url_nfce.py  test_get_url_nfe.py  test_mdfe_serializacao.py  test_nfce_serializacao.py  test_nfce_serializacao_formatar_quantidade.py  test_nfce_serializacao_piscofins.py  test_nfce_serializacao_sem_cliente.py  test_nfce_serializacao_somente_cpf.py  test_nfce_serializacao_vnf_vprod_duas_casas_decimais.py  (+36 more)
(+305 files in other folders)
